# 2d-engine

./: .gitignore  CMakeLists.txt  README.md  setup.py
cocos2d/cocos/: CMakeLists.txt
cocos2d/cocos/2d/: CCActionManager.cpp  CCActionManager.h  CCNode.cpp  CCNode.h
engine/: CMakeLists.txt
engine/action/: Actor.cpp  Actor.hpp  CMakeLists.txt
engine/action/factory/: ActionFactory.cpp  ActionFactory.hpp  CocosActionSerializer.cpp  CocosActionSerializer.hpp
engine/action/ui/: TypingAnimation.cpp  TypingAnimation.hpp
engine/animation/: AnimationManager.cpp  AnimationManager.hpp  AnimationUtil.cpp  AnimationUtil.hpp  CMakeLists.txt
engine/base/: Avatar.cpp  Avatar.hpp  Behaviour.cpp  Behaviour.hpp  CMakeLists.txt  GameObject.cpp  GameObject.hpp  GameScene.cpp  GameScene.hpp  Integer.cpp  Integer.hpp  Path.cpp  Path.hpp
engine/debug/: CMakeLists.txt  DebugConst.cpp  DebugConst.hpp  DebugMacros.h  Log.cpp  Log.hpp
engine/debug/cocos/: CCLogger.cpp  CCLogger.hpp
engine/input/: CMakeLists.txt  ControllerEventHandler.cpp  ControllerEventHandler.hpp  EventHandler.cpp  EventHandler.hpp  TouchEventHandler.cpp  TouchEventHandler.hpp
engine/pattern/: CMakeLists.txt  Factory.hpp  Singleton.hpp  StateMachine.cpp  StateMachine.hpp
engine/platform/: CMakeLists.txt  NativeUI.h  PlatformMacros.h
engine/scene/: CMakeLists.txt  FullScreenEffect.cpp  FullScreenEffect.hpp  GameScene.cpp  GameScene.hpp  SceneFactory.cpp  SceneFactory.hpp  SceneParser.cpp  SceneParser.hpp
engine/sdk/: CMakeLists.txt
engine/serialize/: CMakeLists.txt  Config.cpp  Config.hpp  IniParser.cpp  IniParser.hpp  JsonSerializer.cpp  JsonSerializer.hpp  MsgpackSerializer.cpp  MsgpackSerializer.hpp  Serialize.cpp  Serialize.hpp
engine/util/: CMakeLists.txt  CocosUtil.cpp  CocosUtil.hpp  Common.cpp  Common.hpp  Macros.h  StringUtil.cpp  StringUtil.hpp  TypeCheck.h
template/: CMakeLists.txt
template/Classes/: AppDelegate.cpp  CMakeLists.txt
test/: AppDelegate.cpp  CMakeLists.txt
(+31 files in other folders)
